# EdgeDetector

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  changelog.md  conanfile.py  diagrama_edgeCalculate.drawio
Benchmarks/include/: Benchmark.h  CMakeLists.txt  ZeroCrossingBenchmark.h
Benchmarks/src/: Benchmark.cpp  CMakeLists.txt  ZeroCrossingBenchmark.cpp  main.cpp
EdgeDetector/include/: AlgorithmFactory.h  Buffer.h  BufferTVM.h  CMakeLists.txt  EdgeDetectorException.h  IAlgorithm.h  IBuffer.h  IZeroCrossing.h  Kernel.h  OpenCLAdapter.h  OpenCVAdapter.h  SyntheticMatrix.h  TVMAdapter.h  Utils.h  ZeroCrossingCPU.h  ZeroCrossingOpenCL.h  ZeroCrossingOpenMP.h  ZeroCrossingTVM.h
EdgeDetector/src/: AlgorithmFactory.cpp  Buffer.cpp  BufferTVM.cpp  CMakeLists.txt  EdgeDetectorException.cpp  Kernel.cpp  OpenCLAdapter.cpp  OpenCVAdapter.cpp  SyntheticMatrix.cpp  TVMAdapter.cpp  Utils.cpp  ZeroCrossingCPU.cpp  ZeroCrossingOpenCL.cpp  ZeroCrossingOpenMP.cpp  ZeroCrossingTVM.cpp
Resources/: calculateConfidences_CPU_OPT.c  calculateEdges_OCL_GPU.cl  coherentFilter_OCL_GPU.cl  combineEdges_CPU_OPT.c  filterDerivative_CPU_OPT.c  filterUpsampling_CPU_OPT.c  filterUpsampling_OCL_GPU.cl  transpose_CPU_OPT.c  upsamplingMatrix_OCL_GPU.cl
Resources/kernels_CPU_OPT/: combineEdgesWindows_CPU_OPT.lib
Resources/kernels_GPU/: calculateConfidences_OCL_GPU.cl  combineEdges_OCL_GPU.cl  filterDerivative_OCL_GPU.cl  filterUpsamplingGPU_OCL_GPU.cl  transpose_OCL_GPU.cl
Resources/output/: Benchmarking.md
Resources/outputs/: Benchmarking.md
Test/include/: CMakeLists.txt  ZeroCrossingTest.h
Test/src/: BufferTest.cpp  CMakeLists.txt  OpenCVAdapterTest.cpp  ZeroCrossingCPUTest.cpp  ZeroCrossingOpenCLTest.cpp  ZeroCrossingOpenMPTest.cpp  ZeroCrossingTVMTest.cpp  main.cpp
cmake/: TVM.cmake  config.cmake  copyResources.cmake  docsDoxygen.cmake  warnings.cmake
docs/: Doxyfile  Doxyfile.bak
docs/html/: AlgorithmFactory_8h.html  AlgorithmFactory_8h.js  AlgorithmFactory_8h__incl.dot  AlgorithmFactory_8h__incl.map  AlgorithmFactory_8h__incl.md5  AlgorithmFactory_8h_source.html  BufferTVM_8h.html  BufferTVM_8h.js  BufferTVM_8h__dep__incl.dot  BufferTVM_8h__dep__incl.map  BufferTVM_8h__dep__incl.md5  BufferTVM_8h__incl.dot  BufferTVM_8h__incl.map  BufferTVM_8h__incl.md5  BufferTVM_8h_source.html  Buffer_8h.html  Buffer_8h.js  Buffer_8h__dep__incl.dot  Buffer_8h__dep__incl.map  Buffer_8h__dep__incl.md5  Buffer_8h__incl.dot  Buffer_8h__incl.map  Buffer_8h__incl.md5  Buffer_8h_source.html  CoherentFilterCPU_8h.html  CoherentFilterCPU_8h.js  CoherentFilterCPU_8h__incl.dot  CoherentFilterCPU_8h__incl.map  CoherentFilterCPU_8h__incl.md5  CoherentFilterCPU_8h_source.html  CoherentFilterOpenCL_8h.html  CoherentFilterOpenCL_8h.js  CoherentFilterOpenCL_8h__dep__incl.dot  CoherentFilterOpenCL_8h__dep__incl.map  CoherentFilterOpenCL_8h__dep__incl.md5  CoherentFilterOpenCL_8h__incl.dot  CoherentFilterOpenCL_8h__incl.map  CoherentFilterOpenCL_8h__incl.md5  CoherentFilterOpenCL_8h_source.html  CoherentFilterTVM_8h.html  (+390 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_1.js  defines_3.js  enums_0.js  (+56 more)
